feat: 기본 구조 및 기초 scss 세팅

--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -151,6 +151,4 @@ section {
   width: 500px;
   height: 500px;
   background-color: chartreuse;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
