--- a/assets/sass/base/_preset.scss
+++ b/assets/sass/base/_preset.scss
@@ -1,7 +1,86 @@
-html, body {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  outline-style: none;
+}
+ul {
+  list-style: none;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+img {
+  vertical-align: middle;
+  border: 0;
+}
+button {
+  border: none;
+  cursor: pointer;
+}
+
+html {
   width: 100%;
   height: 100%;
   color: #666;
+  font-size: 10px;
 }
+body {
+  /* overflow: hidden; */
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-width: 500px;
+  height: auto;
+  font-size: 2rem;
+  line-height: 1.5625;
+  font-family: "pretendard", sans-serif;
+  font-weight: 400;
+  color: #333;
+  letter-spacing: -0.06rem;
+}
+
+/* 공통클래스 */
+.wrap {
+  position: relative;
+}
+.inner {
+  position: relative;
+  margin: 0 auto;
+
+  width: 140rem;
+  max-width: calc(100% - 2rem);
+}
+
+.clearfix::after {
+  display: block;
+  position: relative;
+  content: "";
+  width: 100%;
+  clear: both;
+}
+
+/* * * * * * * */
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+.wrap {
+  width: 100%;
+  height: 100%;
+}
+main {
+  width: 100%;
+  height: 100%;
+}
+section {
+  width: 100%;
+  height: 100%;
+}
+
+/* 
+section {
+  padding-top: 9rem;
+} */
