feat: header 영역 작업 시작

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,6 +1,8 @@
 @charset "utf-8";
 
-@import './base/_reset.scss';
-@import './base/_preset.scss';
+@import "./base/_reset.scss";
+@import "./base/_preset.scss";
 
-@import './pages/_temp.scss';
+@import "./layout/header";
+
+@import "./pages/_temp.scss";
