--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,10 +143,39 @@ section {
   height: 100%;
 }
 
-/* 
 section {
   padding-top: 9rem;
-} */
+}
+
+.header {
+  position: fixed;
+  width: 100%;
+  height: 90px;
+  background-color: transparent;
+  z-index: 999998;
+  transition: 0.25s;
+}
+.header::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+  background: rgba(255, 255, 255, 0.6);
+}
+.header.is--active {
+  background-color: #fff;
+}
+.header .inner {
+  position: relative;
+  width: 100%;
+  max-width: calc(100% - 8rem);
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 .box {
   width: 500px;
   height: 500px;
