--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,8 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -53,11 +55,26 @@ table {
   border-spacing: 0;
 }
 
+/*
+Copyright (c) 2021 Kil Hyung-jin, with Reserved Font Name Pretendard.
+https://github.com/orioncactus/pretendard
+
+This Font Software is licensed under the SIL Open Font License, Version 1.1.
+This license is copied below, and is also available with a FAQ at:
+http://scripts.sil.org/OFL
+*/
+/* pretendard */
+/* noto serif kr */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   outline-style: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+* ::-webkit-scrollbar {
+  display: none;
 }
 
 ul {
@@ -141,10 +158,6 @@ main {
 section {
   width: 100%;
   height: 100%;
-}
-
-section {
-  padding-top: 9rem;
 }
 
 .header {
@@ -272,6 +285,42 @@ section {
   background-size: contain;
 }
 
+.carousel .sw-carousel {
+  width: 100%;
+  height: 100%;
+}
+.carousel .sw-carousel img {
+  width: 100%;
+  height: 100%;
+}
+.carousel .scroll {
+  position: absolute;
+  bottom: 7.2rem;
+  left: 50%;
+  padding-bottom: 4.2rem;
+  transform: translate(-50%);
+  color: #fff;
+  font-size: 2rem;
+  z-index: 999;
+}
+.carousel .scroll::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width: 2.9rem;
+  height: 2.6rem;
+  background: url("/assets/images/icon/scroll.png") center no-repeat;
+  background-size: contain;
+  transform: translateX(-50%);
+  animation: arrow-move 1.5s infinite linear alternate;
+}
+
+@keyframes arrow-move {
+  50% {
+    bottom: 0.5rem;
+  }
+}
 .box {
   width: 500px;
   height: 500px;
