feat: 공통 스타일 정의

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -5,5 +5,8 @@
 
 @import "./layout/header";
 @import "./layout/carousel";
+@import "./layout/introduce";
+
+@import "./components/common";
 
 @import "./pages/_temp.scss";
