--- a/assets/sass/base/_preset.scss
+++ b/assets/sass/base/_preset.scss
@@ -18,11 +18,11 @@ http://scripts.sil.org/OFL
   padding: 0;
   box-sizing: border-box;
   outline-style: none;
-  ::-webkit-scrollbar {
-    display: none;
-  }
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  // ::-webkit-scrollbar {
+  //   display: none;
+  // }
+  // -ms-overflow-style: none;
+  // scrollbar-width: none;
 }
 ul {
   list-style: none;
@@ -100,6 +100,6 @@ section {
   height: 100%;
 }
 
-// section {
-//   padding-top: 9rem;
-// }
+.section {
+  padding-top: 9rem;
+}
