--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -70,11 +70,6 @@ http://scripts.sil.org/OFL
   padding: 0;
   box-sizing: border-box;
   outline-style: none;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-* ::-webkit-scrollbar {
-  display: none;
 }
 
 ul {
@@ -158,6 +153,10 @@ main {
 section {
   width: 100%;
   height: 100%;
+}
+
+.section {
+  padding-top: 9rem;
 }
 
 .header {
@@ -321,6 +320,38 @@ section {
     bottom: 0.5rem;
   }
 }
+.introduce {
+  background: url("/assets/images/section01.jpg") center no-repeat;
+  background-size: cover;
+}
+
+.common-title {
+  display: block;
+  color: #fff;
+  text-align: center;
+  font-family: "NotoSerif", Serif;
+  word-break: keep-all;
+  font-size: 5.5rem;
+  font-weight: 600;
+  color: #fff;
+  line-height: 7.7rem;
+  letter-spacing: -2.52px;
+}
+
+.common-desc {
+  display: block;
+  color: #fff;
+  text-align: center;
+  font-family: "NotoSerif", Serif;
+  word-break: keep-all;
+  margin-top: 2.6rem;
+  font-size: 2.2rem;
+  font-weight: 500;
+  color: #fff;
+  line-height: 3.8rem;
+  letter-spacing: -0.75px;
+}
+
 .box {
   width: 500px;
   height: 500px;
