--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -324,16 +324,39 @@ section {
   background: url("/assets/images/section01.jpg") center no-repeat;
   background-size: cover;
 }
+.introduce .btn-area .apply {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  display: inline-block;
+  padding: 2.3rem 6.2rem;
+  text-align: center;
+  font-size: 2.3rem;
+  font-weight: 600;
+  line-height: 2.2rem;
+  border: 1px solid transparent;
+  transition: all 0.3s;
+  border-radius: 3.5rem;
+}
+.introduce .btn-area .apply::after {
+  content: "";
+  display: inline-block;
+  position: relative;
+  top: 0.1rem;
+  margin-left: 0.9rem;
+  width: 1.8rem;
+  height: 2rem;
+  background: url("/assets/images/icon/arrow-right-solid.svg") center no-repeat;
+  background-size: cover;
+}
 
 .common-title {
   display: block;
   color: #fff;
   text-align: center;
-  font-family: "NotoSerif", Serif;
+  font-family: "Noto Serif KR", serif;
   word-break: keep-all;
   font-size: 5.5rem;
   font-weight: 600;
-  color: #fff;
   line-height: 7.7rem;
   letter-spacing: -2.52px;
 }
@@ -342,18 +365,20 @@ section {
   display: block;
   color: #fff;
   text-align: center;
-  font-family: "NotoSerif", Serif;
+  font-family: "Noto Serif KR", serif;
   word-break: keep-all;
   margin-top: 2.6rem;
   font-size: 2.2rem;
   font-weight: 500;
-  color: #fff;
   line-height: 3.8rem;
   letter-spacing: -0.75px;
 }
 
-.box {
-  width: 500px;
-  height: 500px;
-  background-color: chartreuse;
+.btn-area {
+  margin-top: 3.4rem;
+  text-align: center;
+}
+
+.section .inner {
+  margin-top: 7%;
 }/*# sourceMappingURL=style.css.map */
