--- a/assets/sass/layout/_introduce.scss
+++ b/assets/sass/layout/_introduce.scss
@@ -1,6 +1,7 @@
 .introduce {
   background: url("/assets/images/section01.jpg") center no-repeat;
   background-size: cover;
+  position: relative;
 
   .btn-area {
     .apply {
