feat: event 영역 - left side 작업 중

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -6,6 +6,7 @@
 @import "./layout/header";
 @import "./layout/carousel";
 @import "./layout/introduce";
+@import "./layout/event";
 
 @import "./components/common";
 @import "./components/tabmenu";
