--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -155,10 +155,6 @@ section {
   height: 100%;
 }
 
-.section {
-  padding-top: 9rem;
-}
-
 .header {
   position: fixed;
   width: 100%;
@@ -350,6 +346,75 @@ section {
   background-size: cover;
 }
 
+.event {
+  background: url("/assets/images/section02.jpg") center no-repeat;
+  background-size: cover;
+}
+.event .inner {
+  display: flex;
+}
+.event .inner > div {
+  width: 50%;
+}
+.event .inner .left-side > * {
+  text-align: left;
+}
+.event .inner .left-side .menu-list-area {
+  width: 30rem;
+  margin-top: 5rem;
+}
+.event .inner .left-side .menu-list-area .list-area li:nth-child(1) > a::before {
+  content: "";
+  display: inline-block;
+  position: relative;
+  width: 24px;
+  height: 24px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("/assets/images/section02_icon01.png");
+}
+.event .inner .left-side .menu-list-area .list-area li:nth-child(2) > a::before {
+  content: "";
+  display: inline-block;
+  position: relative;
+  width: 24px;
+  height: 24px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 29px;
+  height: 29px;
+  background-image: url("/assets/images/section02_icon02.png");
+}
+.event .inner .left-side .menu-list-area .list-area li:nth-child(3) > a::before {
+  content: "";
+  display: inline-block;
+  position: relative;
+  width: 24px;
+  height: 24px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("/assets/images/section02_icon03.png");
+}
+.event .inner .left-side .menu-list-area .list-area li a::after {
+  content: url("/assets/images/icon/angle-right.svg");
+}
+.event .inner .left-side .menu-list-area .list-area li a {
+  display: block;
+  padding: 2rem 4rem;
+  position: relative;
+  font-size: 2rem;
+  font-weight: 500;
+  color: #fff;
+  opacity: 0.7;
+  transition: opacity 0.3s;
+}
+.event .inner .left-side .menu-list-area .list-area li a:hover {
+  opacity: 1;
+}
+
 .common-title {
   display: block;
   color: #fff;
@@ -453,6 +518,10 @@ section {
   margin-bottom: 3.4rem !important;
 }
 
+.section {
+  padding-top: 9rem;
+}
 .section .inner {
   margin-top: 7%;
+  position: relative;
 }/*# sourceMappingURL=style.css.map */
