--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,10 +155,6 @@ section {
   height: 100%;
 }
 
-.section {
-  padding-top: 9rem;
-}
-
 .header {
   position: fixed;
   width: 100%;
@@ -312,7 +308,14 @@ section {
   background: url("/assets/images/icon/scroll.png") center no-repeat;
   background-size: contain;
   transform: translateX(-50%);
-  animation: arrow-move 1.5s infinite linear alternate;
+  -webkit-animation: arrow-move 1.5s infinite linear alternate;
+          animation: arrow-move 1.5s infinite linear alternate;
+}
+
+@-webkit-keyframes arrow-move {
+  50% {
+    bottom: 0.5rem;
+  }
 }
 
 @keyframes arrow-move {
@@ -323,17 +326,110 @@ section {
 .introduce {
   background: url("/assets/images/section01.jpg") center no-repeat;
   background-size: cover;
+  position: relative;
+}
+.introduce .btn-area .apply {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  display: inline-block;
+  padding: 2.3rem 6.2rem;
+  text-align: center;
+  font-size: 2.3rem;
+  font-weight: 600;
+  line-height: 2.2rem;
+  border: 1px solid transparent;
+  transition: all 0.3s;
+  border-radius: 3.5rem;
+}
+.introduce .btn-area .apply::after {
+  content: "";
+  display: inline-block;
+  position: relative;
+  top: 0.1rem;
+  margin-left: 0.9rem;
+  width: 1.8rem;
+  height: 2rem;
+  background: url("/assets/images/icon/arrow-right-solid.svg") center no-repeat;
+  background-size: cover;
+}
+
+.event {
+  background: url("/assets/images/section02.jpg") center no-repeat;
+  background-size: cover;
+}
+.event .inner {
+  display: flex;
+}
+.event .inner > div {
+  width: 50%;
+}
+.event .inner .left-side > * {
+  text-align: left;
+}
+.event .inner .left-side .menu-list-area {
+  width: 30rem;
+  margin-top: 5rem;
+}
+.event .inner .left-side .menu-list-area .list-area li:nth-child(1) > a::before {
+  content: "";
+  display: inline-block;
+  position: relative;
+  width: 24px;
+  height: 24px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("/assets/images/section02_icon01.png");
+}
+.event .inner .left-side .menu-list-area .list-area li:nth-child(2) > a::before {
+  content: "";
+  display: inline-block;
+  position: relative;
+  width: 24px;
+  height: 24px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 29px;
+  height: 29px;
+  background-image: url("/assets/images/section02_icon02.png");
+}
+.event .inner .left-side .menu-list-area .list-area li:nth-child(3) > a::before {
+  content: "";
+  display: inline-block;
+  position: relative;
+  width: 24px;
+  height: 24px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("/assets/images/section02_icon03.png");
+}
+.event .inner .left-side .menu-list-area .list-area li a::after {
+  content: url("/assets/images/icon/angle-right.svg");
+}
+.event .inner .left-side .menu-list-area .list-area li a {
+  display: block;
+  padding: 2rem 4rem;
+  position: relative;
+  font-size: 2rem;
+  font-weight: 500;
+  color: #fff;
+  opacity: 0.7;
+  transition: opacity 0.3s;
+}
+.event .inner .left-side .menu-list-area .list-area li a:hover {
+  opacity: 1;
 }
 
 .common-title {
   display: block;
   color: #fff;
   text-align: center;
-  font-family: "NotoSerif", Serif;
+  font-family: "Noto Serif KR", serif;
   word-break: keep-all;
   font-size: 5.5rem;
   font-weight: 600;
-  color: #fff;
   line-height: 7.7rem;
   letter-spacing: -2.52px;
 }
@@ -342,20 +438,97 @@ section {
   display: block;
   color: #fff;
   text-align: center;
-  font-family: "NotoSerif", Serif;
+  font-family: "Noto Serif KR", serif;
   word-break: keep-all;
   margin-top: 2.6rem;
   font-size: 2.2rem;
   font-weight: 500;
-  color: #fff;
   line-height: 3.8rem;
   letter-spacing: -0.75px;
 }
 
-.box {
-  width: 500px;
-  height: 500px;
-  background-color: chartreuse;
+.btn-area {
+  margin-top: 3.4rem;
+  text-align: center;
 }
 
-/*# sourceMappingURL=style.css.map */
+.tab-menu {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 22rem;
+  max-width: 102rem;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+}
+.tab-menu .tab-item {
+  width: 33.3333333333%;
+  vertical-align: middle;
+  height: 100%;
+  color: #fff;
+  font-size: 2.3rem;
+  font-weight: bold;
+  text-align: center;
+  padding-right: 2px;
+}
+.tab-menu .tab-item:nth-child(1) > a::before {
+  background-color: #22adb9;
+}
+.tab-menu .tab-item:nth-child(2) > a::before {
+  background-color: #1b5bbe;
+}
+.tab-menu .tab-item:nth-child(3) > a::before {
+  background-color: #d93f69;
+}
+.tab-menu .tab-item a {
+  position: relative;
+  display: block;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.33);
+}
+.tab-menu .tab-item a::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 0.4rem;
+  transition: all 0.3s;
+  z-index: 0;
+}
+.tab-menu .tab-item a:hover::before {
+  content: "";
+  height: 100%;
+}
+.tab-menu .tab-item a .item {
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+}
+.tab-menu .tab-item a .item div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.tab-menu .tab-item a .item div img {
+  margin-bottom: 2rem;
+}
+.tab-menu .tab-item:nth-child(2) img {
+  margin-bottom: 3.4rem !important;
+}
+
+.section {
+  padding-top: 9rem;
+}
+.section .inner {
+  margin-top: 7%;
+  position: relative;
+}
