fix: 이미지 경로 수정

--- a/assets/sass/layout/_carousel.scss
+++ b/assets/sass/layout/_carousel.scss
@@ -25,7 +25,7 @@
       bottom: 0;
       width: 2.9rem;
       height: 2.6rem;
-      background: url("/assets/images/icon/scroll.png") center no-repeat;
+      background: url("../../assets/images/icon/scroll.png") center no-repeat;
       background-size: contain;
       transform: translateX(-50%);
       animation: arrow-move 1.5s infinite linear alternate;
