--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -27,7 +27,7 @@
       .gnb-open {
         width: 30px;
         height: 30px;
-        background: url("/assets/images/icon/list_black.svg") no-repeat center;
+        background: url("../../assets/images/icon/list_black.svg") no-repeat center;
         background-size: contain;
       }
     }
@@ -129,7 +129,7 @@
         display: block;
         width: 30px;
         height: 30px;
-        background: url("/assets/images/icon/list.svg") no-repeat center;
+        background: url("../../assets/images/icon/list.svg") no-repeat center;
         background-size: contain;
       }
     }
