--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ section {
 .header.is--active .util-menu .gnb-open {
   width: 30px;
   height: 30px;
-  background: url("/assets/images/icon/list_black.svg") no-repeat center;
+  background: url("../../assets/images/icon/list_black.svg") no-repeat center;
   background-size: contain;
 }
 .header .inner {
@@ -276,7 +276,7 @@ section {
   display: block;
   width: 30px;
   height: 30px;
-  background: url("/assets/images/icon/list.svg") no-repeat center;
+  background: url("../../assets/images/icon/list.svg") no-repeat center;
   background-size: contain;
 }
 
@@ -305,17 +305,10 @@ section {
   bottom: 0;
   width: 2.9rem;
   height: 2.6rem;
-  background: url("/assets/images/icon/scroll.png") center no-repeat;
+  background: url("../../assets/images/icon/scroll.png") center no-repeat;
   background-size: contain;
   transform: translateX(-50%);
-  -webkit-animation: arrow-move 1.5s infinite linear alternate;
-          animation: arrow-move 1.5s infinite linear alternate;
-}
-
-@-webkit-keyframes arrow-move {
-  50% {
-    bottom: 0.5rem;
-  }
+  animation: arrow-move 1.5s infinite linear alternate;
 }
 
 @keyframes arrow-move {
@@ -324,7 +317,7 @@ section {
   }
 }
 .introduce {
-  background: url("/assets/images/section01.jpg") center no-repeat;
+  background: url("../../assets/images/section01.jpg") center no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -349,12 +342,12 @@ section {
   margin-left: 0.9rem;
   width: 1.8rem;
   height: 2rem;
-  background: url("/assets/images/icon/arrow-right-solid.svg") center no-repeat;
+  background: url("../../assets/images/icon/arrow-right-solid.svg") center no-repeat;
   background-size: cover;
 }
 
 .event {
-  background: url("/assets/images/section02.jpg") center no-repeat;
+  background: url("../../assets/images/section02.jpg") center no-repeat;
   background-size: cover;
 }
 .event .inner {
@@ -370,48 +363,65 @@ section {
   width: 30rem;
   margin-top: 5rem;
 }
-.event .inner .left-side .menu-list-area .list-area li:nth-child(1) > a::before {
+.event .inner .left-side .menu-list-area .list-area li {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.4509803922);
+  position: relative;
+}
+.event .inner .left-side .menu-list-area .list-area li:nth-child(1)::before {
   content: "";
   display: inline-block;
-  position: relative;
   width: 24px;
   height: 24px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("/assets/images/section02_icon01.png");
+  background-image: url("../../assets/images/section02_icon01.png");
 }
-.event .inner .left-side .menu-list-area .list-area li:nth-child(2) > a::before {
+.event .inner .left-side .menu-list-area .list-area li:nth-child(2)::before {
   content: "";
   display: inline-block;
-  position: relative;
   width: 24px;
   height: 24px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   width: 29px;
   height: 29px;
-  background-image: url("/assets/images/section02_icon02.png");
+  background-image: url("../../assets/images/section02_icon02.png");
 }
-.event .inner .left-side .menu-list-area .list-area li:nth-child(3) > a::before {
+.event .inner .left-side .menu-list-area .list-area li:nth-child(3)::before {
   content: "";
   display: inline-block;
-  position: relative;
   width: 24px;
   height: 24px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url("/assets/images/section02_icon03.png");
+  background-image: url("../../assets/images/section02_icon03.png");
 }
-.event .inner .left-side .menu-list-area .list-area li a::after {
-  content: url("/assets/images/icon/angle-right.svg");
+.event .inner .left-side .menu-list-area .list-area li::after {
+  content: url("../../assets/images/icon/angle-right.svg");
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .event .inner .left-side .menu-list-area .list-area li a {
   display: block;
-  padding: 2rem 4rem;
   position: relative;
+  padding: 2rem 4rem;
   font-size: 2rem;
   font-weight: 500;
   color: #fff;
