--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -10,5 +10,6 @@
 
 @import "./components/common";
 @import "./components/tabmenu";
+@import "./components/eventCarousel";
 
 @import "./pages/page";
